--- a/css/custom.css
+++ b/css/custom.css
@@ -33,7 +33,7 @@ input[type="submit"] {
     line-height: 100%;
     margin-right: 2px;
     display: inline-block;
-    border: 3px solid #b400ff;
+    border: 3px solid #253746;
     -moz-border-radius: 30px;
     -webkit-border-radius: 30px;
     border-radius: 30px;
