--- a/css/custom.css
+++ b/css/custom.css
@@ -11,8 +11,19 @@
   padding: 5px 20px;
   background: #fdfdfd;
 }
+.user-login-form{
+ /*      background: url(../img/event.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;*/
+}
 
-
+.login-page-wrapper{
+    background: url(../img/event.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 .user-login-form .form-text,
 .user-login-form .form-email,
@@ -40,10 +51,16 @@ input[type="submit"] {
     -o-transition: all .3s;
     -webkit-transition: all .3s;
     transition: all .3s;
+
 }
 
+/*
+ background: url(../img/event.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+*/
 
-
-#block-my-theme-local-tasks nav.tabs{
+/*#block-my-theme-local-tasks nav.tabs{
   display: none;
-}
+}*/
