--- a/templates/page--user--login.html.twig
+++ b/templates/page--user--login.html.twig
@@ -74,7 +74,7 @@
       </div>
     {% endif %}
     <div id="main-wrapper" class="layout-main-wrapper layout-container clearfix">
-      <div id="main" class="layout-main clearfix">
+      <div id="main" class="clearfix">
         {{ page.breadcrumb }}
         <main id="content" class="column main-content" role="main">
           <section class="section login-page-wrapper">
