--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,15 @@
 
 
+body{
+  font-size: 100%;
+}
 /*login-form-start*/
 
 .user-login-form,
 .user-form,
 .user-pass{
   max-width: 500px;
-  margin: 40px auto;
+  margin: auto;
   border: 1px solid #e6e6e6;
   padding: 5px 20px;
   background: #fdfdfd;
