changes in theme

--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,8 @@ body{
   margin: auto;
   border: 1px solid #e6e6e6;
   padding: 5px 20px;
-  background: #fdfdfd;
+  /*background: #fdfdfd;*/
+  background-color: #b4babede;
 }
 .user-login-form{
  /*      background: url(../img/event.jpg);
@@ -64,6 +65,28 @@ input[type="submit"] {
     background-size: cover;
 */
 
+/*
 .login-page-wrapper #block-my-theme-local-tasks nav.tabs{
   display: none;
 }
+*/
+
+@media screen and (min-width: 37.5em){
+.login-page-wrapper #block-my-theme-local-tasks nav.tabs .tabs ul.primary li {
+    display: inline-block;
+    float: left;
+  }
+  .login-page-wrapper #block-my-theme-local-tasks nav.tabs .tabs ul.primary{
+    text-align: center;
+    background: none;
+  }
+}
+
+.login-page-wrapper #block-my-theme-local-tasks nav.tabs .tabs ul.primary li{
+      border-radius: 6px;
+      background-color: #757f842e;
+}
+
+.login-page-wrapper #block-my-theme-local-tasks nav.tabs .tabs ul.primary li:first-child{
+  display: none;
+} 
