--- a/css/custom.css
+++ b/css/custom.css
@@ -128,7 +128,12 @@ input[type="submit"] {
 
 
 /*register page start*/
-
+.register-page-wrapper{
+    background: url(../img/event.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 .register-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li {
       border-radius: 6px;
