--- a/css/custom.css
+++ b/css/custom.css
@@ -107,6 +107,10 @@ input[type="submit"] {
     transition: all 0.5s;
 
 }
+.login-page-wrapper .user-login-form #edit-actions{
+  text-align: center;
+}
+
 
 @media screen and (min-width: 37.5em){
   .login-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary {
@@ -167,7 +171,9 @@ input[type="submit"] {
   text-align: center;
 }
 
-
+.register-page-wrapper .user-register-form #edit-actions{
+  text-align: center;
+}
 @media screen and (min-width: 37.5em){
 
   .register-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary {
