--- a/templates/block/block--views-exposed-filter-block--grid-of-search-content-page-1.html.twig
+++ b/templates/block/block--views-exposed-filter-block--grid-of-search-content-page-1.html.twig
@@ -34,18 +34,20 @@
     'block',
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
-    'col-md-6',
+    'row',
   ]
 %}
-<div{{ attributes.addClass(classes) }}>
+<div class="container">
+  <div{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
   {% endif %}
   {{ title_suffix }}
   {% block content %}
-    <div{{ content_attributes.addClass('content') }}>
+    <div{{ content_attributes.addClass('content col-md-6 offset-md-3') }}>
       {{ content }}
     </div>
   {% endblock %}
-</div>
+  </div>
+<div>
