--- a/css/custom.css
+++ b/css/custom.css
@@ -3,6 +3,217 @@
 body{
   font-size: 100%;
 }
+
+
+/* text */
+.text-right {
+  text-align: right; }
+
+.text-left {
+  text-align: left; }
+
+.text-center {
+  text-align: center; }
+
+
+/* display properties */
+.grid-inline{
+  display: inline-grid;
+}
+
+.block-inline{
+  display: inline-block;
+}
+
+.flex-inline{
+  display: inline-flex;
+}
+
+.table-inline{
+  display: inline-table;
+}
+.inline{
+  display: inline;
+}
+
+
+.hidden{
+  display: none;
+}
+
+body .pt_10 {
+  padding-top: 60px; 
+}
+
+body .pt_20 {
+  padding-top: 60px; 
+}
+
+body .pt_30 {
+  padding-top: 60px; 
+}
+
+
+body .pt_40 {
+  padding-top: 60px; 
+}
+
+body .pt_50 {
+  padding-top: 60px; }
+
+body .pt_60 {
+  padding-top: 60px; }
+
+body .mt_5, .mt-5 {
+  margin-top: 5px; }
+
+body .mt_10, .mt-10 {
+  margin-top: 10px; }
+
+body .mt_15, .mt-15 {
+  margin-top: 15px; }
+
+body .mt_20, .mt-20 {
+  margin-top: 20px; }
+
+body .mt_25, .mt-25 {
+  margin-top: 25px; }
+
+body .mt_30, .mt-30 {
+  margin-top: 30px; }
+
+body .mt_35, .mt-35 {
+  margin-top: 35px; }
+
+body .mt_40, .mt-40 {
+  margin-top: 40px; }
+
+body .mt_45, .mt-45 {
+  margin-top: 45px; }
+
+body .mt_50, .mt-50 {
+  margin-top: 50px; }
+
+body .mt_55, .mt-55 {
+  margin-top: 55px; }
+
+body .mt_60, .mt-60 {
+  margin-top: 60px; }
+
+body .mt_65, .mt-65 {
+  margin-top: 65px; }
+
+body .mt_70, .mt-70 {
+  margin-top: 70px; }
+
+body .mt_75, .mt-75 {
+  margin-top: 75px; }
+
+body .mt_80, .mt-80 {
+  margin-top: 80px; }
+
+body .mt_85, .mt-85 {
+  margin-top: 85px; }
+
+body .mt_90, .mt-90 {
+  margin-top: 90px; }
+
+body .mt_95, .mt-95 {
+  margin-top: 95px; }
+
+body .mt_100, .mt-100 {
+  margin-top: 100px; }
+
+body .mb_5, .mb-5 {
+  margin-bottom: 5px; }
+
+body .mb_10, .mb-10 {
+  margin-bottom: 10px; }
+
+body .mb_15, .mb-15 {
+  margin-bottom: 15px; }
+
+body .mb_20, .mb-20 {
+  margin-bottom: 20px; }
+
+body .mb_25, .mb-25 {
+  margin-bottom: 25px; }
+
+body .mb_30, .mb-30 {
+  margin-bottom: 30px; }
+
+body .mb_35, .mb-35 {
+  margin-bottom: 35px; }
+
+body .mb_40, .mb-40 {
+  margin-bottom: 40px; }
+
+body .mb_45, .mb-45 {
+  margin-bottom: 45px; }
+
+body .mb_50, .mb-50 {
+  margin-bottom: 50px; }
+
+body .mb_55 {
+  margin-bottom: 55px; }
+
+body .mb_60 {
+  margin-bottom: 60px; }
+
+body .mb_65 {
+  margin-bottom: 65px; }
+
+body .mb_70 {
+  margin-bottom: 70px; }
+
+body .mb_75 {
+  margin-bottom: 75px; }
+
+body .mb_80 {
+  margin-bottom: 80px; }
+
+body .mb_85 {
+  margin-bottom: 85px; }
+
+body .mb_90 {
+  margin-bottom: 90px; }
+
+body .mb_95 {
+  margin-bottom: 95px; }
+
+body .mb_100 {
+  margin-bottom: 100px; }
+
+
+body .lh_5{
+  line-height: 5px;
+}
+body .lh_10{
+  line-height: 10px;
+}
+body .lh_15{
+  line-height: 15px;
+}
+body .lh_20{
+ line-height: 20px;
+}
+
+.list-none{
+  list-style-type: none;
+}
+
+/* title style and size*/
+.fw-mid {
+  font-weight: 600; }
+
+.fw-bold {
+  font-weight: 800; }
+
+/* button */
+
+
+
+
 /*login-form-start*/
 
 .user-login-form,
@@ -23,10 +234,14 @@ body{
 }
 
 .login-page-wrapper{
-    background: url(../img/event.jpg);
+    background: url(../img/user_bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.login-page-wrapper .region-content{
+  padding-top: 50px;
 }
 
 .user-login-form .form-text,
@@ -74,7 +289,7 @@ input[type="submit"] {
 
 /*login page start*/
 .login-page-wrapper{
-    background: url(../img/event.jpg);
+    background: url(../img/user_bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -198,7 +413,7 @@ form#views-exposed-form-grid-of-search-content-page-1 .form-actions{
 
 form#views-exposed-form-multi-filter-search-page-1 .form-actions{
   display: inline-block;
-  padding-top: 15px;
+  padding-top: 20px;
 }
 
 
