form template added

--- a/css/custom.css
+++ b/css/custom.css
@@ -212,48 +212,6 @@ body .lh_20{
 /* button */
 
 
-
-
-/*login-form-start*/
-
-.user-login-form,
-.user-form,
-.user-pass{
-  max-width: 500px;
-  margin: auto;
-  border: 1px solid #e6e6e6;
-  padding: 5px 20px;
-  /*background: #fdfdfd;*/
-  background-color: #d6dce275;
-}
-.user-login-form{
- /*      background: url(../img/event.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;*/
-}
-
-.login-page-wrapper{
-    background: url(../img/user_bg.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.login-page-wrapper .region-content{
-  padding-top: 50px;
-}
-
-.user-login-form .form-text,
-.user-login-form .form-email,
-.user-form .form-text,
-.user-form .form-email,
-.user-pass .form-text{
-  width: 100%;
-}
-/* login form end */
-
-
 input[type="submit"] {
     /*background-color: #253746;*/
     cursor: pointer;
@@ -273,21 +231,39 @@ input[type="submit"] {
 
 }
 
-/*
- background: url(../img/event.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-*/
 
-/*
-.login-page-wrapper #block-my-theme-local-tasks nav.tabs{
-  display: none;
-}
-*/
+/*login-form-start*/
+
+
+/* login form end */
+
+
+
 
 
 /*login page start*/
+
+.user-login-form,
+.user-form,
+.user-pass{
+  max-width: 500px;
+  margin: auto;
+  border: 1px solid #e6e6e6;
+  padding: 5px 20px;
+  /*background: #fdfdfd;*/
+  background-color: #d6dce275;
+  color: #000000;
+}
+
+
+.user-login-form .form-text,
+.user-login-form .form-email,
+.user-form .form-text,
+.user-form .form-email,
+.user-pass .form-text{
+  width: 100%;
+}
+
 .login-page-wrapper{
     background: url(../img/user_bg.jpg);
     background-position: center;
@@ -296,32 +272,39 @@ input[type="submit"] {
     background-attachment: fixed;
 }
 
-.login-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li {
-      border-radius: 6px;
+.login-page-wrapper .region-content{
+  padding-top: 50px;
 }
 
-.login-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li:first-child{
-  display: none;
-} 
+
 
 .login-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li a{
-/*  background-color: #757f842e;
-  background-color: #d6dce275;*/
   border-radius: 6px;
   border-style: solid;
   text-shadow: none; 
+  padding: 10px;
+  height: auto;
+  line-height: inherit;
+  color: #403c3c;
+  font-weight: 600;
 }
 
 .login-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li a:hover{
   background-color: #656b6ff2;
   color: #ffffff;
   text-shadow: none;
-  -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    transition: all 0.5s;
-
+  -webkit-transition: all 0.7s;
+    -moz-transition: all 0.7s;
+    -o-transition: all 0.7s;
+    transition: all 0.7s;
 }
+
+.login-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li.is-active a{
+   background-color: #656b6ff2;
+  color: #ffffff;
+  text-shadow: none;
+} 
+
 .login-page-wrapper .user-login-form #edit-actions{
   text-align: center;
 }
@@ -356,31 +339,36 @@ input[type="submit"] {
     background-attachment: fixed;
 }
 
-.register-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li {
-      border-radius: 6px;
-      background-color: #757f842e;
+.register-page-wrapper .region-content{
+  padding-top: 50px;
 }
 
-.register-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li:nth-child(2){
-  display: none;
-} 
-
 .register-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li a{
-  background-color: #757f842e;
   border-radius: 6px;
   border-style: solid;
   text-shadow: none; 
+    padding: 10px;
+  height: auto;
+  line-height: inherit;
+  color: #403c3c;
+  font-weight: 600;
 }
 
 .register-page-wrapper  #block-my-theme-local-tasks nav.tabs ul.primary li a:hover{
   background-color: #656b6ff2;
   color: #ffffff;
   text-shadow: none;
-  -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    transition: all 0.5s;
+  -webkit-transition: all 0.7s;
+    -moz-transition: all 0.7s;
+    -o-transition: all 0.7s;
+    transition: all 0.7s;
 }
+
+.register-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li.is-active a{
+   background-color: #656b6ff2;
+  color: #ffffff;
+  text-shadow: none;
+} 
 
 .register-page-wrapper .page-title{
   text-align: center;
@@ -402,6 +390,74 @@ input[type="submit"] {
     }
 }
 /*register page end*/
+
+
+
+/*password reset page start*/
+
+.password-page-wrapper{
+    background: url(../img/user_bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.password-page-wrapper .region-content{
+  padding-top: 50px;
+}
+
+.password-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li a{
+  border-radius: 6px;
+  border-style: solid;
+  text-shadow: none; 
+  padding: 10px;
+  height: auto;
+  line-height: inherit;
+  color: #403c3c;
+  font-weight: 600;
+}
+
+.password-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li a:hover{
+  background-color: #656b6ff2;
+  color: #ffffff;
+  text-shadow: none;
+  -webkit-transition: all 0.7s;
+    -moz-transition: all 0.7s;
+    -o-transition: all 0.7s;
+    transition: all 0.7s;
+
+}
+
+.password-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li.is-active a{
+   background-color: #656b6ff2;
+  color: #ffffff;
+  text-shadow: none;
+} 
+
+.password-page-wrapper .user-pass #edit-actions{
+  text-align: center;
+}
+
+
+@media screen and (min-width: 37.5em){
+  .password-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary {
+    text-align: center;
+    background: none;
+  }
+
+  .password-page-wrapper #block-my-theme-local-tasks nav.tabs  ul.primary li {
+      display: inline-block;
+      float: none;
+    }
+
+   .password-page-wrapper #block-my-theme-content{
+    padding-bottom: 10em;
+   }
+}
+/*password reset page end*/
+
+
 
 
 /*search form start*/
