--- a/templates/page/page--user--password.html.twig
+++ b/templates/page/page--user--password.html.twig
@@ -77,7 +77,7 @@
       <div id="main" class="clearfix">
         {{ page.breadcrumb }}
         <main id="content" class="column main-content" role="main">
-          <section class="section login-page-wrapper">
+          <section class="section password-page-wrapper">
             <a id="main-content" tabindex="-1"></a>
             {{ page.content }}
           </section>
