--- a/css/custom.css
+++ b/css/custom.css
@@ -335,7 +335,7 @@ input[type="submit"] {
 
 /*register page start*/
 .register-page-wrapper{
-    background: url(../img/event.jpg);
+    background: url(../img/user_bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
