--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,9 @@ body{
 }
 
 
+
+
+
 /* text */
 .text-right {
   text-align: right; }
@@ -251,8 +254,8 @@ input[type="submit"] {
   border: 1px solid #e6e6e6;
   padding: 5px 20px;
   /*background: #fdfdfd;*/
-  background-color: #d6dce275;
-  color: #000000;
+  background-color: #212529a6;
+  color: #fff;
 }
 
 
@@ -265,7 +268,7 @@ input[type="submit"] {
 }
 
 .login-page-wrapper{
-    background: url(../img/user_bg.jpg);
+    background: url(../img/notebook-336634_1920.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -273,7 +276,8 @@ input[type="submit"] {
 }
 
 .login-page-wrapper .region-content{
-  padding-top: 50px;
+  padding-top: 30px;
+  padding-bottom: 100px;
 }
 
 
@@ -335,7 +339,7 @@ input[type="submit"] {
 
 /*register page start*/
 .register-page-wrapper{
-    background: url(../img/event.jpg);
+    background: url(../img/notebook-336634_1920.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -343,7 +347,8 @@ input[type="submit"] {
 }
 
 .register-page-wrapper .region-content{
-  padding-top: 50px;
+  padding-top: 30px;
+  padding-bottom: 100px;
 }
 
 .register-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li a{
@@ -403,7 +408,7 @@ input[type="submit"] {
 /*password reset page start*/
 
 .password-page-wrapper{
-    background: url(../img/user_bg.jpg);
+    background: url(../img/notebook-336634_1920.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -411,7 +416,8 @@ input[type="submit"] {
 }
 
 .password-page-wrapper .region-content{
-  padding-top: 50px;
+  padding-top: 30px;
+  padding-bottom: 100px;
 }
 
 .password-page-wrapper #block-my-theme-local-tasks nav.tabs ul.primary li a{
@@ -444,6 +450,11 @@ input[type="submit"] {
 
 .password-page-wrapper .page-title{
   text-align: center;
+}
+@media (min-width: 851px){
+.layout-container {
+    max-width: 100vw;
+}
 }
 
 
