register page image updated

--- a/css/custom.css
+++ b/css/custom.css
@@ -343,7 +343,7 @@ input[type="submit"] {
 
 /*register page start*/
 .register-page-wrapper{
-    background: url(../img/user_bg.jpg);
+    background: url(../img/notebook-336634_1920.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
